--- a/packages/nextjs-front/package.json
+++ b/packages/nextjs-front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@mui/material-nextjs": "^5.15.11",
+    "graphql": "^16.8.1",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +19,10 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "14.2.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "prettier": "^3.2.5"
   }
 }
